// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionMenu logged-in version renders logged-in version 1`] = `
<Component
  firstName="John"
  locale="en"
  loggedIn={true}
  onMenuToggleClick={[MockFunction]}
>
  <ActionMenu
    firstName="John"
    locale="en"
    loggedIn={true}
    onMenuToggleClick={[MockFunction]}
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedInActionMenu
        firstName="John"
        locale="en"
        loggedIn={true}
        onMenuToggleClick={[MockFunction]}
        t={[Function]}
      >
        <div>
          <span
            className="ds-u-display--none ds-u-sm-display--inline-block"
          >
            John
          </span>
          <MenuButton
            firstName="John"
            locale="en"
            loggedIn={true}
            onMenuToggleClick={[MockFunction]}
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedInActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-in version set aria-expanded to true 1`] = `
<Component
  firstName="John"
  locale="en"
  loggedIn={true}
  onMenuToggleClick={[MockFunction]}
  open={true}
>
  <ActionMenu
    firstName="John"
    locale="en"
    loggedIn={true}
    onMenuToggleClick={[MockFunction]}
    open={true}
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedInActionMenu
        firstName="John"
        locale="en"
        loggedIn={true}
        onMenuToggleClick={[MockFunction]}
        open={true}
        t={[Function]}
      >
        <div>
          <span
            className="ds-u-display--none ds-u-sm-display--inline-block"
          >
            John
          </span>
          <MenuButton
            firstName="John"
            locale="en"
            loggedIn={true}
            onMenuToggleClick={[MockFunction]}
            open={true}
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={true}
              aria-label="header.closeMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={true}
                aria-label="header.closeMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2"
                onClick={[Function]}
                type="button"
              >
                <ClearIconAlternate>
                  <svg
                    className="ds-c-clear-icon"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.6002309 7 5.2573243-5.25732429c.1899264-.1899264.1899264-.49704142 0-.68696782l-.9132631-.91326309c-.1899264-.1899264-.4970414-.1899264-.6869678 0l-5.2573243 5.2573243-5.25732429-5.2573243c-.1899264-.1899264-.49704142-.1899264-.68696782 0l-.91326309.91326309c-.1899264.1899264-.1899264.49704142 0 .68696782l5.2573243 5.25732429-5.2573243 5.2573243c-.1899264.1899264-.1899264.4970414 0 .6869678l.91326309.9132631c.1899264.1899264.49704142.1899264.68696782 0l5.25732429-5.2573243 5.2573243 5.2573243c.1899264.1899264.4970414.1899264.6869678 0l.9132631-.9132631c.1899264-.1899264.1899264-.4970414 0-.6869678z"
                    />
                  </svg>
                </ClearIconAlternate>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedInActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-out version renders custom locale switch link 1`] = `
<Component
  locale="en"
  loggedIn={false}
  onMenuToggleClick={[MockFunction]}
  switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
>
  <ActionMenu
    locale="en"
    loggedIn={false}
    onMenuToggleClick={[MockFunction]}
    switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedOutActionMenu
        locale="en"
        loggedIn={false}
        onMenuToggleClick={[MockFunction]}
        switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
        t={[Function]}
      >
        <div>
          <LoggedOutLinks
            locale="en"
            switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
          >
            <ul
              className="hc-c-logged-out-links ds-c-list--bare ds-u-display--none ds-u-sm-display--inline-block"
            >
              <li
                className="hc-c-logged-out-links__li"
                key="https://ayudalocal.cuidadodesalud.gov/es"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://ayudalocal.cuidadodesalud.gov/es"
                >
                  header.español
                </a>
              </li>
              <li
                className="hc-c-logged-out-links__li"
                key="/login"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="/login"
                >
                  header.login
                </a>
              </li>
            </ul>
          </LoggedOutLinks>
          <MenuButton
            className="ds-u-display--inline-block ds-u-sm-display--none"
            locale="en"
            loggedIn={false}
            onMenuToggleClick={[MockFunction]}
            switchLocaleLink="https://ayudalocal.cuidadodesalud.gov/es"
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedOutActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-out version renders links with absolute URLs 1`] = `
<Component
  locale="en"
  loggedIn={false}
  onMenuToggleClick={[MockFunction]}
  primaryDomain="https://www.healthcare.gov"
>
  <ActionMenu
    locale="en"
    loggedIn={false}
    onMenuToggleClick={[MockFunction]}
    primaryDomain="https://www.healthcare.gov"
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedOutActionMenu
        locale="en"
        loggedIn={false}
        onMenuToggleClick={[MockFunction]}
        primaryDomain="https://www.healthcare.gov"
        t={[Function]}
      >
        <div>
          <LoggedOutLinks
            locale="en"
            primaryDomain="https://www.healthcare.gov"
          >
            <ul
              className="hc-c-logged-out-links ds-c-list--bare ds-u-display--none ds-u-sm-display--inline-block"
            >
              <li
                className="hc-c-logged-out-links__li"
                key="https://www.cuidadodesalud.gov/es/"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://www.cuidadodesalud.gov/es/"
                >
                  header.español
                </a>
              </li>
              <li
                className="hc-c-logged-out-links__li"
                key="https://www.healthcare.gov/login"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://www.healthcare.gov/login"
                >
                  header.login
                </a>
              </li>
            </ul>
          </LoggedOutLinks>
          <MenuButton
            className="ds-u-display--inline-block ds-u-sm-display--none"
            locale="en"
            loggedIn={false}
            onMenuToggleClick={[MockFunction]}
            primaryDomain="https://www.healthcare.gov"
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedOutActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;

exports[`ActionMenu logged-out version renders logged-out version 1`] = `
<Component
  locale="en"
  loggedIn={false}
  onMenuToggleClick={[MockFunction]}
>
  <ActionMenu
    locale="en"
    loggedIn={false}
    onMenuToggleClick={[MockFunction]}
    t={[Function]}
  >
    <nav
      className="hc-c-header__actions ds-l-col ds-l-col--auto ds-u-margin-left--auto ds-u-font-weight--bold"
      id="hc-c-header__actions"
      role="navigation"
    >
      <LoggedOutActionMenu
        locale="en"
        loggedIn={false}
        onMenuToggleClick={[MockFunction]}
        t={[Function]}
      >
        <div>
          <LoggedOutLinks
            locale="en"
          >
            <ul
              className="hc-c-logged-out-links ds-c-list--bare ds-u-display--none ds-u-sm-display--inline-block"
            >
              <li
                className="hc-c-logged-out-links__li"
                key="https://www.cuidadodesalud.gov/es/"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="https://www.cuidadodesalud.gov/es/"
                >
                  header.español
                </a>
              </li>
              <li
                className="hc-c-logged-out-links__li"
                key="/login"
              >
                <a
                  className="hc-c-logged-out-links__link"
                  href="/login"
                >
                  header.login
                </a>
              </li>
            </ul>
          </LoggedOutLinks>
          <MenuButton
            className="ds-u-display--inline-block ds-u-sm-display--none"
            locale="en"
            loggedIn={false}
            onMenuToggleClick={[MockFunction]}
            t={[Function]}
          >
            <Button
              aria-controls="hc-c-menu"
              aria-expanded={false}
              aria-label="header.openMenu"
              className="hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
              component="button"
              onClick={[MockFunction]}
              size="small"
              type="button"
            >
              <button
                aria-controls="hc-c-menu"
                aria-expanded={false}
                aria-label="header.openMenu"
                className="ds-c-button ds-c-button--small hc-c-action-menu-button ds-u-sm-margin-left--2 ds-u-display--inline-block ds-u-sm-display--none"
                onClick={[Function]}
                type="button"
              >
                <MenuIcon
                  className="ds-u-margin-right--1"
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-bars fa-w-14 ds-u-margin-right--1"
                    data-icon="bars"
                    data-prefix="fas"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                      fill="currentColor"
                    />
                  </svg>
                </MenuIcon>
                header.menu
              </button>
            </Button>
          </MenuButton>
        </div>
      </LoggedOutActionMenu>
    </nav>
  </ActionMenu>
</Component>
`;
